syntax = "proto3";

package nest_demo;

message User {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  bool is_active = 4;
}